--- a/package.json
+++ b/package.json
@@ -112,7 +112,9 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
-    "supports-color": "^9.4.0"
+    "supports-color": "^9.4.0",
+    "telegraph-node": "^1.0.4",
+    "telegraph-uploader": "^2.0.0"
   },
   "config": {
     "commitizen": {
