--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,5 @@ PICA_DL_SEARCH_KEYWORDS=
 # 这里的章节是指按时间排序，1代表第一章
 # 示例：1,3,5-20 或者设置为 all 表示全部下载
 PICA_DL_CHAPTER=all
+# Telegraph 访问令牌，可选
+TELEGRAPH_TOKEN=
